<resources>
    <string name="app_name">영남대 소모임</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_version">Ver 1.48</string>
    <string name="main">메인화면</string>
    <string name="yu_news">영대소식</string>
    <string name="timetable">시간표</string>
    <string name="library_seat">도서관 좌석</string>
    <string name="shuttle_bus">통학버스 시간표</string>
    <string name="logout">로그아웃</string>
    <string name="action_group_menu1">Test1</string>
    <string name="action_group_menu2">Test2</string>
    <string name="title_find">그룹찾기</string>
    <string name="title_request">가입신청중 그룹</string>
    <string name="title_create">그룹 만들기</string>

    <string name="select_image">이미지 선택</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="image_none">이미지 없음</string>

    <!-- AdMob -->
    <string name="admob_app_id">ca-app-pub-6359051986076073~1299706209</string>
    <string name="native_ad">ca-app-pub-6359051986076073/1199386432</string>
    <string name="ad_attribution">Ad</string>
    <string name="title_activity_ver_info">버젼 정보</string>
    <string name="banner_ad_unit_id_settings">ca-app-pub-6359051986076073/8366745222</string>
</resources>
